fixed form on mobile

--- a/app/www/css/components/review.css
+++ b/app/www/css/components/review.css
@@ -18,7 +18,7 @@ article.review h3 {
 
 article.review time {
     color: var(--text-muted);
-    font-size: 14px;
+    font-size: 0.875rem;
     font-weight: 400;
 }
 
